[gd_scene load_steps=9 format=3 uid="uid://jt6r3tjwsvmd"]

[ext_resource type="Script" path="res://World/Objects/Nature/Ores/SmallOre.gd" id="1_1lid1"]
[ext_resource type="Texture2D" uid="uid://51hgi22iupms" path="res://Assets/Images/Ores/stone1/medium/6.png" id="2_81i7n"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_x8ky6"]
radius = 8.0

[sub_resource type="Animation" id="3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SmallOre:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SmallHurtBox/smallHurtBox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SmallOre:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.08165e-12, 2.08165e-12)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SmallMovementCollisionBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}

[sub_resource type="Animation" id="4"]
resource_name = "small_ore_break"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SmallHurtBox/smallHurtBox:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SmallOre:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SmallMovementCollisionBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="5"]
resource_name = "small_ore_hit_right"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SmallOre:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15, 0.25, 0.35, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -12), Vector2(3, -12), Vector2(-2, -12), Vector2(1, -12), Vector2(-1, -12), Vector2(0, -12)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t1yxw"]
_data = {
"RESET": SubResource("3"),
"small_ore_break": SubResource("4"),
"small_ore_hit_right": SubResource("5")
}

[node name="SmallOreObject" type="Node2D"]
modulate = Color(1.32, 1.32, 1.32, 1)
scale = Vector2(0.85, 0.85)
script = ExtResource("1_1lid1")

[node name="SmallOre" type="Sprite2D" parent="."]
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(1.35, 1.35)
texture = ExtResource("2_81i7n")
offset = Vector2(5, -24)

[node name="SmallHurtBox" type="Area2D" parent="."]
position = Vector2(8.23529, -8.23529)
collision_layer = 262160
collision_mask = 0

[node name="smallHurtBox" type="CollisionShape2D" parent="SmallHurtBox"]
shape = SubResource("1")

[node name="SmallMovementCollisionBox" type="StaticBody2D" parent="."]
position = Vector2(8.2353, -8.23529)
collision_layer = 3
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="SmallMovementCollisionBox"]
shape = SubResource("CircleShape2D_x8ky6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_t1yxw")
}

[node name="SoundEffects" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, 8.2353)
volume_db = -12.0

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
visible = false
position = Vector2(1.19209e-07, -17.6471)
scale = Vector2(2.70588, 2.73529)

[connection signal="area_entered" from="SmallHurtBox" to="." method="_on_SmallHurtBox_area_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
